<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/layout_real_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" >

            <TextView
                android:id="@+id/text_real_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:text="@string/real_time"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.gc.materialdesign.views.Switch
                android:id="@+id/switch_real_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:layout_toRightOf="@+id/text_real_time"
                android:background="#1E88E5"
                materialdesign:check="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="10dp"
            android:background="@color/divide_color" />

        <RelativeLayout
            android:id="@+id/layout_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" >

            <TextView
                android:id="@+id/text_select_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/recognize_mode"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_select_mode"
                android:layout_marginTop="5dp"
                android:text="@string/mode_overlay"
                android:textColor="@color/grey"
                android:textSize="12sp" />
        </RelativeLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="10dp"
            android:background="@color/divide_color" />

        <RelativeLayout
            android:id="@+id/layout_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" >

            <TextView
                android:id="@+id/text_select_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/recognize_version"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_select_version"
                android:layout_marginTop="5dp"
                android:text="@string/version_mixed"
                android:textColor="@color/grey"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="10dp"
            android:background="@color/divide_color" />

        <!-- 
        <RelativeLayout
            android:id="@+id/layout_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" >

            <TextView
                android:id="@+id/text_select_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/target"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
       
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="10dp"
            android:background="@color/divide_color" />
		 --> 
		 
        <RelativeLayout
            android:id="@+id/layout_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" >

            <TextView
                android:id="@+id/text_select_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/select_color"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="10dp"
            android:background="@color/divide_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" >

            <TextView
                android:id="@+id/text_select_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/select_stroke_width"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.gc.materialdesign.views.Slider
                android:id="@+id/width_slider"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_select_width"
                android:layout_marginTop="10dp"
                android:background="#1E88E5"
                materialdesign:max="99"
                materialdesign:min="1"
                materialdesign:showNumberIndicator="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="10dp"
            android:background="@color/divide_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" >

            <TextView
                android:id="@+id/text_select_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/select_recognize_end_wait_time"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.gc.materialdesign.views.Slider
                android:id="@+id/time_slider"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_select_time"
                android:layout_marginTop="10dp"
                android:background="#1E88E5"
                materialdesign:max="1000"
                materialdesign:min="0"
                materialdesign:showNumberIndicator="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="10dp"
            android:background="@color/divide_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" >

            <TextView
                android:id="@+id/text_select_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/select_recognize_speed"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.gc.materialdesign.views.Slider
                android:id="@+id/speed_slider"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_select_speed"
                android:layout_marginTop="10dp"
                android:background="#1E88E5"
                materialdesign:max="99"
                materialdesign:min="1"
                materialdesign:showNumberIndicator="true" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>